# JeanMichel

./: .gitmodules  CMakeLists.txt  build.ps1  configure.ps1  run.ps1
src/: SynthAudioProcessor.cpp  SynthAudioProcessor.h  SynthEditor.cpp  SynthEditor.h  typeDefs.h
src/Synth/: SynthSound.cpp  SynthSound.h  SynthVoice.cpp  SynthVoice.h
src/Synth/Modules/: ADSR.cpp  ADSR.h  LFO.cpp  LFO.h  LadderFilter.cpp  LadderFilter.h  Mixer.cpp  Mixer.h  Module.cpp  Module.h  VCA.cpp  VCA.h  VCO.cpp  VCO.h  WaveFunctions.cpp  WaveFunctions.h
src/Synth/UI/: ADSR_Section.cpp  ADSR_Section.h  CLookAndFeel.cpp  CLookAndFeel.h  ImageSlider.cpp  ImageSlider.h  LFO_Section.cpp  LFO_Section.h  MIX_Section.cpp  MIX_Section.h  Meter.cpp  Meter.h  UI_func.cpp  UI_func.h  VCA_Section.cpp  VCA_Section.h  VCF_Section.cpp  VCF_Section.h  VCO_Section.cpp  VCO_Section.h  WaveSlider.cpp  WaveSlider.h
